--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -17,7 +17,7 @@
 \noindent \large {présentée par\\}
 \noindent \LARGE Edmundo-Pavel \textsc{Soriano-Morales} \\
 \vspace*{0.4cm}
-\noindent {\Huge \textbf{Hypergraphs and information fusion for term representation enrichment. Applications to named entity recognition and word sense disambiguation}} \\
+\noindent {\LARGE \textbf{Hypergraphs and information fusion for term representation enrichment. Applications to named entity recognition and word sense disambiguation}} \\
 \vspace*{0.5cm}
 \noindent \Large préparée au sein du laboratoire \textsc{ERIC} \\
 
@@ -25,22 +25,21 @@
 \noindent \Large sous la direction de Sabine \textsc{Loudcher} et Julien \textsc{Ah-Pine} \\
 
 \vspace*{0.2cm}
-\noindent \large Soutenue publiquement le  devant le jury~:\\
+%\noindent \large Soutenue publiquement le  devant le jury~:\\
 \vspace*{0.1cm}
 \end{center}
-\noindent \large \textbf{Jury :} \\
+\noindent \large \textbf{Devant le jury conmposé de :} \\
 \begin{center}
 \noindent \large 
-%\begin{tabular}{llcl}
-%      \textit{Reviewers :}	& Patrick \textsc{Clarysse}		& - & CNRS (CREATIS)\\
-%				& Louis \textsc{Collins}		& - & McGill University\\
-%      \textit{Advisor :}	& Grégoire \textsc{Malandain}		& - & INRIA (Asclepios)\\
-%      \textit{President :}	& Nicholas \textsc{Ayache}		& - & INRIA (Asclepios)\\
-%      \textit{Examinators :}   & Pierre-Yves \textsc{Bondiau}          & - & Centre Antoine Lacassagne (Nice)\\
-%      				& Guido \textsc{Gerig}			& - & University of North Carolina\\
-%      				& Vincent \textsc{Grégoire}		& - & Université Catholique de Louvain\\
-%      \textit{Invited :}		& Hanna \textsc{Kafrouni}		& - & DOSISoft S.A.
-%\end{tabular}
+\begin{tabular}{ll}
+      \textit{Rapporteurs :}	& \textbf{Marc El-Bèze}, Professeur Émérite, Université d'Avignon\\
+				& \textbf{Mathieu Roche}, Maître de Conférences (HDR), CIRAD\\
+      \textit{Examinatrices :}	& \textbf{Farah Benamara Zitoune}, Maitresse de Conférences (HDR),\\
+      &Université Paul Sabatier\\
+      & \textbf{Sophie Rosset}, Directrice de Recherche, Université Paris-Sud \\
+      \textit{Directeurs :}	& \textbf{Sabine Loudcher}, Professeure des Universités, Université Lyon 2\\
+      & \textbf{Julien Ah-Pine}, Maître de Conférences, Université Lyon 2
+\end{tabular}
 \end{center}
 \end{titlepage}
 \sloppy
